fix spacing and remove dead code

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,10 @@
 body {
-
   margin: 0;
   font-family: 'Rubik', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url('./assets/branding/background.jpg');
   background-size: cover;
-  /* background-blend-mode: color-dodge;
-  background-color: rgb(255, 255, 255); */
 }
 
 code {
