--- a/src/pages/ChangePassword/ChangePassword.module.css
+++ b/src/pages/ChangePassword/ChangePassword.module.css
@@ -22,8 +22,7 @@
   background-color: white;
 }
 
-.container input,
-button {
+.container input, button {
   width: 100%;
   padding: 12px;
   font-size: 14px;
@@ -48,7 +47,6 @@ button {
   flex-direction: column;
   justify-content: center;
 }
-
 
 .container div {
   width: 100%;
